# qr-generator

./: README.md  app.py  pyproject.toml
.github/workflows/: pr_checks.yml
docs/: poetry.md
lambda/: create_qr.py  requirements.txt  update_table.py
my-nextjs-app/: package.json
qr_generator/: qr_generator_stack.py
qr_generator/website/: website.html
tests/unit/: test_qr_generator_stack.py
